--- a/Unroll2/Base.lproj/Main.storyboard
+++ b/Unroll2/Base.lproj/Main.storyboard
@@ -30,6 +30,8 @@
                                 <action selector="editTableView:" destination="NO4-kQ-OsT" id="yHa-Jj-eRP"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="0Wj-Ry-7YY"/>
+                        <barButtonItem title="QuickNote" id="qsQ-ZU-jQf"/>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="2Cf-0a-pw2"/>
                         <barButtonItem systemItem="add" id="Reb-LD-ifB">
                             <connections>
@@ -39,6 +41,7 @@
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Photo Notes Albums" id="QE4-93-jxo">
                         <barButtonItem key="backBarButtonItem" title="Albums" id="L1L-3p-ckW"/>
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="N5S-FN-s6G"/>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
